# sdlogl

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Display.cpp  Display.h  Mesh.cpp  Mesh.h  README.md  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.h  main.cpp  obj_loader.cpp
res/: basicShader.fs.glsl  basicShader.vs.glsl
